// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-jNrqiC hJIbOY"
>
  <div
    className="sc-gmSHEY kInOz"
  >
    <div
      className="sc-glUVip dLeCZi"
    >
      <div
        className="sc-jKzugg hJZdVJ"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-goMRkL jOZpfW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-VcoSR hBdaOc"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-jNrqiC jfYnCz"
>
  <div
    className="sc-gmSHEY kInOz"
  >
    <div
      className="sc-glUVip dLeCZi"
    >
      <div
        className="sc-jKzugg hJZdVJ"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-goMRkL jOZpfW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-VcoSR hBdaOc"
  >
    <span>
      <button
        className="sc-dOaiCS jUHHDE"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-jdzWJC ifPczp"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-dOaiCS frkkZD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-jdzWJC ifPczp"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-jNrqiC hJIbOY"
>
  <div
    className="sc-gmSHEY Nolky"
  >
    <div
      className="sc-goMRkL pNXhE"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-VcoSR hBdaOc"
    >
      <button
        className="sc-dOaiCS dJDOtr"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-jdzWJC ifPczp"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-jNrqiC jYYvkO"
>
  <div
    className="sc-gmSHEY kInOz"
  >
    <div
      className="sc-glUVip dLeCZi"
    >
      <div
        className="sc-jKzugg hJZdVJ"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-goMRkL jOZpfW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-VcoSR hBdaOc"
  >
    <span>
      <button
        className="sc-dOaiCS jUHHDE"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-jdzWJC ifPczp"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-dOaiCS frkkZD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-jdzWJC ifPczp"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-jNrqiC jYYvkO"
  >
    <div
      className="sc-gmSHEY kInOz"
    >
      <div
        className="sc-glUVip dLeCZi"
      >
        <div
          className="sc-jKzugg hJZdVJ"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-goMRkL jOZpfW"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-VcoSR hBdaOc"
    >
      <span>
        <button
          className="sc-dOaiCS jUHHDE"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-dOaiCS frkkZD"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-jNrqiC hJIbOY"
>
  <div
    className="sc-gmSHEY kInOz"
  >
    <div
      className="sc-glUVip dLeCZi"
    >
      <div
        className="sc-jKzugg hJZdVJ"
      >
        Title here
      </div>
      <div
        className="sc-fEVxLL kgtTvz"
      >
        <svg
          className="sc-hTtwUo"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-goMRkL jOZpfW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
